<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_activity"
        style="@style/NameStyle" />

    <EditText
        android:id="@+id/nickname_et"
        style="@style/NameStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/enter_your_nickname" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/nickname_tv"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/NameStyle" />

    <ImageView
        android:id="@+id/avatar_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/avatar_image"
        android:src="@android:drawable/btn_star_big_on"
        tools:srcCompat="@tools:sample/avatars"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_menu_view" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem"
                style="@style/NameStyle"
                android:paddingHorizontal="6dp"
                android:lineSpacingMultiplier="1.2"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>